lib/jif/tests/ArrayLeak.jif
class ArrayLeak
{
    void m() {
        int{Alice:}[]{} a = null;
        int{Alice:Bob}[]{} b = null;
        a = b; // error: not subtypes!
    }
}

